# baw-case-mcp-server

./: .env.example  .gitignore  .gitmodules  BOB_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPARISON.md  QUICKSTART.md  README.md  __init__.py  baw-case.json  baw_case_mcp_server.py  bob-mcp-config.json  pyproject.toml  requirements.txt
.bob/: custom_modes.yaml  mcp.json
baw_case_mcp/: __init__.py  __main__.py  server.py
